--- a/Parse/HPRT1vsTK1.rmd
+++ b/Parse/HPRT1vsTK1.rmd
@@ -1,5 +1,5 @@
 ---
-title: "HPRT1 and TK1 expression across cell lines"
+title: "HPRT1 and TK1 transcript expressions across cell lines"
 output: html_document
 ---
 ### Parsing Data
@@ -13,8 +13,15 @@ require(readr)
 library(knitr)
 ```
 
-A separate python script was created to filter the CCLE data to only what we need: HPRT1 and TK1 transcripts with the appropriate cell lines for each. 
-The transcript expression values are log2-transformed to mitigate the effects of outliers. 1 is also added to prevent errors in case there are any zero values. 
+A python script (separate from this .Rmd script) was created to filter the CCLE data based on desired cell lines of genes HPRT1 and TK1. The cell lines are part of the following groups:
+
+* Wild type
+* Null
+* Codon 175 mutations (R175H)
+* Codon 248 mutations (R248Q)
+* Codon 273 mutations (R273H)
+
+All transcript expression values are log2-transformed to mitigate the effects of outliers. 1 is also added to prevent errors in case there are any zero values. 
 ```{r, message=FALSE, warning=FALSE}
 # Read trimmed data as dataframe
 CCLE_data <- as.data.frame(read_tsv("./transcripts_HPRT1_TK1.tsv")) 
@@ -50,17 +57,20 @@ for (transcript in transcripts_TK1) {
 
 ### ANOVA and Tukey Tests
 
-For each transcript in both HPRT1 and TK1, multiple comparison analysis is performed using [Tukey's test](https://en.wikipedia.org/wiki/Tukey%27s_range_test).
-In each gene, we do the following tests:
+Multiple comparison analysis is performed using [Tukey's test](https://en.wikipedia.org/wiki/Tukey%27s_range_test).
 
-* In all transcripts combined, compare means between each transcript
-* In each individual transcript of the gene, compare means between each cell line group
+In each gene...
 
-```{r}
+1. We analyze the means between each transcript ID.
+2. Then, we analyze the means between each cell line group.
+
+```{r, message=FALSE, warning=FALSE}
 # HPRT1
+# Comparing means between each transcript ID
 HPRT1_av <- aov(Value ~ TranscriptID, data = HPRT1)
 HPRT1_tukey <- TukeyHSD(HPRT1_av)
 
+# Comparing means between each group in each transcript ID
 HPRT1_001_av <- aov(Value ~ Group, data = HPRT1_001)
 HPRT1_001_tukey <- TukeyHSD(HPRT1_001_av)
 
@@ -71,9 +81,11 @@ HPRT1_003_av <- aov(Value ~ Group, data = HPRT1_003)
 HPRT1_003_tukey <- TukeyHSD(HPRT1_003_av)
 
 # TK1
+# Comparing means between each transcript ID
 TK1_av <- aov(Value ~ TranscriptID, data = TK1)
 TK1_tukey <- TukeyHSD(TK1_av)
 
+# Comparing means between each group in each transcript ID
 TK1_001_av <- aov(Value ~ Group, data = TK1_001)
 TK1_001_tukey <- TukeyHSD(TK1_001_av)
 
@@ -93,11 +105,11 @@ TK1_006_av <- aov(Value ~ Group, data = TK1_006)
 TK1_006_tukey <- TukeyHSD(TK1_006_av)
 ```
 
-All p-values from the statistical analyses above are placed in the following files (by gene):
+All p-values from the statistical analyses above are placed in the following files, separated by gene:
 
 * "HPRT1_transcript_pvals.tsv"
 * "TK1_transcript_pvals.tsv"
-```{r}
+```{r, message=FALSE, warning=FALSE}
 options(scipen = 999) # Keep values in numeric form instead of scientific notation
 
 # Function that creates a dataframe of tukey p-values
@@ -134,9 +146,11 @@ write.table(TK1_pvals, file = "./TK1_transcript_pvals.tsv", sep = "\t", quote = 
 ```
 
 ### Plots
-The boxplots outputted by the code below illustrates transcript expression in HPRT1 and TK1. In each graph, boxplots are separated by transcript IDs
-Creating boxplots for all transcripts
-```{r}
+The boxplots outputted by the code below illustrates transcript expression in HPRT1 and TK1. The graphs are organized by transcript ID, as seen in the labels of the grey boxes. In addition, the following cell lines are highlighted:
+
+* DU145 (from R273H)
+* PC3 (from Null)
+```{r, message=FALSE, warning=FALSE}
 make_boxplot_combined <- function(dataframe, gene) {
   set.seed(101)
   ggplot(dataframe, aes(x = Group, y = Value, fill = Group)) +
@@ -164,95 +178,8 @@ print(make_boxplot_combined(TK1, "TK1"))
 ggsave(file="TK1_all.pdf", width=12)
 ```
 
-Creating boxplot of all transcripts combined in HPRT1. Do ANOVA and Tukey to see if there is significance between 273 mutations and WT p53 cell lines
-```{r}
-# Make boxplot
-set.seed(101)
-ggplot(HPRT1, aes(x = Group, y = Value, fill = Group)) +
-  geom_boxplot(outlier.shape = NA, alpha = 0.5) +
-  geom_jitter(alpha = 0.3) +
-  geom_jitter(data = filter(HPRT1, Cell_Line == "DU_145"), aes(colour = "DU_145"), size = 1.8, alpha = 1) +
-  geom_jitter(data = filter(HPRT1, Cell_Line == "PC-3"), aes(colour = "PC-3"), size = 1.8, alpha = 1) +
-  scale_colour_hue(name = "Cell Lines", l = 45) +
-  scale_y_continuous(name = "Transcript-Level Value\n(log2 transformed)",
-                     breaks = seq(0,10,1)) +
-  scale_x_discrete(name = "") +
-  ggtitle("Transcript Expression in HPRT1") +
-  guides(fill = guide_legend(title = "Cell Line Group")) +
-  theme_bw() +
-  theme(plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
-        axis.title = element_text(face = "bold"),
-        axis.ticks.x = element_blank(),
-        axis.text.x = element_blank())
-
-# Save plot to a pdf file
-ggsave(file="HPRT1_combined.pdf", width=8)
-
-# Do ANOVA and Tukey
-HPRT1_combined_av <- aov(Value ~ Group, data = HPRT1)
-HPRT1_combined_tukey <- TukeyHSD(HPRT1_combined_av)
-
-# Extract p-values from HPRT1_combined_tukey (which compares groups in HPRT1 to each other) and write to a new file
-HPRT1_combined_df <- data.frame(HPRT1_combined_tukey$Group)
-HPRT1_combined_df <- cbind(rownames(HPRT1_combined_df), data.frame(HPRT1_combined_df, row.names = NULL))
-colnames(HPRT1_combined_df)[1] <- "Group"
-HPRT1_combined_df <- HPRT1_combined_df[,c("Group", "p.adj")]
-write.table(HPRT1_combined_df, file = "./HPRT1_combined_pvals.tsv", sep = "\t", quote = FALSE, row.names = FALSE)
-```
-
-Separate data by group 
-```{r}
-# Do ANOVA and Tukey
-HPRT1_combined_av <- aov(Value ~ Group, data = HPRT1)
-HPRT1_combined_tukey <- TukeyHSD(HPRT1_combined_av)
-
-# Extract p-values from HPRT1_combined_tukey (which compares groups in HPRT1 to each other) and write to a new file
-HPRT1_combined_df <- data.frame(HPRT1_combined_tukey$Group)
-HPRT1_combined_df <- cbind(rownames(HPRT1_combined_df), data.frame(HPRT1_combined_df, row.names = NULL))
-colnames(HPRT1_combined_df)[1] <- "Group"
-HPRT1_combined_df <- HPRT1_combined_df[,c("Group", "p.adj")]
-write.table(HPRT1_combined_df, file = "./HPRT1_combined_pvals.tsv", sep = "\t", quote = FALSE, row.names = FALSE)
-```
-
-Creating boxplot of all transcripts combined in HPRT1 separated by protein coding and processed transcript. Do ANOVA and Tukey to see if there is significance between 273 mutations and WT p53 cell lines
-```{r}
-# Make boxplot
-set.seed(101)
-ggplot(HPRT1, aes(x = Group, y = Value, fill = Group)) +
-  geom_boxplot(outlier.shape = NA, alpha = 0.5) +
-  geom_jitter(alpha = 0.3) +
-  geom_jitter(data = filter(HPRT1, Cell_Line == "DU_145"), aes(colour = "DU_145"), size = 2, alpha = 0.9) +
-  geom_jitter(data = filter(HPRT1, Cell_Line == "PC-3"), aes(colour = "PC-3"), size = 2, alpha = 0.9) +
-  scale_colour_hue(name = "Cell Line", l = 45) +
-  scale_y_continuous(name = "Transcript-Level Value\n(log2 transformed)",
-                     breaks = seq(0,10,1)) +
-  scale_x_discrete(name = "") +
-  ggtitle("Transcript Expression in HPRT1") +
-  guides(fill = guide_legend(title = "Cell Line Group")) +
-  theme_bw() +
-  theme(plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
-        axis.title = element_text(face = "bold"),
-        axis.ticks.x = element_blank(),
-        axis.text.x = element_blank()) +
-  facet_grid(. ~ TranscriptType)
-
-# Do ANOVA and Tukey
-HPRT1_processed_av <- aov(Value ~ Group, data = HPRT1_processed)
-HPRT1_processed_tukey <- TukeyHSD(HPRT1_processed_av)
-
-HPRT1_protein_av <- aov(Value ~ Group, data = HPRT1_protein)
-HPRT1_protein_tukey <- TukeyHSD(HPRT1_protein_av)
-
-# Extract p-values from HPRT1_combined_tukey (which compares groups in HPRT1 to each other) and write to a new file
-HPRT1_processed_df <- make_dataframe(HPRT1_processed_tukey, "HPRT1_processed_transcript")
-HPRT1_protein_df <- make_dataframe(HPRT1_protein_tukey, "HPRT1_protein_coding")
-
-HPRT1_pvals <- list(HPRT1_processed_df, HPRT1_protein_df) %>% reduce(full_join, by = "Group")
-write.table(HPRT1_pvals, file = "./HPRT1_transcript_types_pvals.tsv", sep = "\t", quote = FALSE, row.names = FALSE)
-
-```
-Creating boxplots for individual type of transcript
-```{r}
+The boxplots outputted by the code below contain exactly the same data as the boxplots above. Here, however, each graph only contains data from a single transcript ID. 
+```{r, message=FALSE, warning=FALSE}
 make_boxplot_ind <- function(dataframe, transcript, type, break_size) {
   set.seed(101)
   ggplot(dataframe, aes(x = Group, y = Value, fill = Group)) +
@@ -280,7 +207,6 @@ ggsave(file="HPRT1_002.pdf", width=6.5)
 print(make_boxplot_ind(HPRT1_003, "HPRT1-003", "Processed Transcript", 0.5))
 ggsave(file="HPRT1_003.pdf", width=6.5)
 
-
 print(make_boxplot_ind(TK1_001, "TK1-001", "Protein Coding", 0.5))
 ggsave(file="TK1_001.pdf", width=6.5)
 print(make_boxplot_ind(TK1_002, "TK1-002", "Protein Coding", 0.5))
@@ -293,11 +219,5 @@ print(make_boxplot_ind(TK1_005, "TK1-005", "Protein Coding", 0.5))
 ggsave(file="TK1_005.pdf", width=6.5)
 print(make_boxplot_ind(TK1_006, "TK1-006", "Protein Coding", 1.5))
 ggsave(file="TK1_006.pdf", width=6.5)
-
-# save_pdf <- function(subtype, gene) {
-#   file_name <- paste(, sep="")
-#   ggsave(file_name, width=6.5)
-# }
-
 ```
 
